# confidential-ai-healthcare-demo

./: .gitignore  .gitmodules  BENCHMARK_SETUP.md  CORREZIONE_WASI_GFX.md  FASE1_COMPLETATA.md  GPU_TRAINING_IMPLEMENTATO.md  QUICKSTART_ATTESTATION.md  README.md  SCRIPT_GUIDE.md  TRAINING_GPU_SUMMARY.md  WASI_WEBGPU_BETA_GUIDE.md  WASI_WEBGPU_IMPLEMENTATION_COMPLETE.md  WASMTIME_ATTESTATION_IMPLEMENTATION.md  WASMWEBGPU_COMPLETE.md  WASM_IMPLEMENTATION_GUIDE.md  attestation.py  attestation_local.py  attestation_simple.py  build_all.sh  build_gpu_host.sh  build_wasm.sh  build_wasmwebgpu_ml.sh  build_webgpu_host.sh  check_gpu_cc.py  debug_wasmwebgpu.sh  export_diabetes_for_wasm.py  infer_model.py  main.py  make_executable.sh  run.sh  run_all_benchmarks.sh  run_local.sh  run_python_benchmark.sh  run_wasm_benchmark.sh  run_wasm_docker.sh  run_wasm_local.sh  run_wasmwebgpu_benchmark.sh  run_wasmwebgpu_docker.sh  run_wasmwebgpu_local.sh  run_with_attestation.sh  (+9 more)
attestation/: attestation.py
benchmark-suite/: README.md  latex_generator.py  main.py  plot_generator.py  requirements.txt  run_benchmark.sh
benchmark-suite/results/: .gitkeep
deprecated/: README.md
docker/: Dockerfile  Dockerfile.wasm  Dockerfile.wasmwebgpu  requirements.txt
infrastructure/: deploy.ps1  install.ps1
python-baseline/: README.md  build.sh  requirements.txt  run.sh  setup.sh
python-baseline/src/: main.py
python-baseline/tee_attestation/: Cargo.toml  README.md  pyproject.toml
python-baseline/tee_attestation/python/tee_attestation/: __init__.py
python-baseline/tee_attestation/src/: lib.rs
wasi-gpu/: README.md
wasm-ml/: .gitignore  Cargo.toml  README.md
wasm-ml/data/: .gitignore
wasm-ml/examples/: attestation_example.rs
wasm-ml/shaders/: average.wgsl  bootstrap_sample.wgsl  find_split.wgsl
wasm-ml/src/: attestation.rs  data.rs  gpu_compute.rs  gpu_training.rs  gpu_wasi.rs  lib.rs  main.rs  random_forest.rs
wasm-ml/src/deprecated/: gpu_training.rs.bak
wasm-ml/wit/: compute.wit
wasmtime-gpu-host/: .gitignore  Cargo.toml  README.md
wasmtime-gpu-host/src/: attestation.rs  host.rs  main.rs  tee_host.rs
wasmtime-gpu-host/src/backend/: cuda.rs  mod.rs  webgpu.rs
wasmtime-gpu-host/wit/: compute.wit  ml-kernels.wit
wasmtime-webgpu-host/: ATTESTATION.md  Cargo.toml
wasmtime-webgpu-host/src/: gpu_backend.rs  main.rs  tee_host.rs  webgpu_host.rs
wasmwebgpu-ml/: CMakeLists.txt  DESIGN_SUMMARY.md  GPU_DOCKER_GUIDE.md  README.md  build.sh  test_hello.cpp  test_stdout.sh
wasmwebgpu-ml/examples/: main_with_attestation.cpp
wasmwebgpu-ml/src/: attestation.hpp  cabi_realloc.c  dataset.cpp  dataset.hpp  gpu_executor.cpp  gpu_executor.hpp  gpu_executor_wit.cpp  main.cpp  random_forest.cpp  random_forest.hpp  wasi_gpu.h  wasi_webgpu_wrapper.hpp
wasmwebgpu-ml/wit/: ml-kernels.wit  world.wit
