[package]
name = "wasm-ml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-ml-benchmark"
path = "src/main.rs"

[dependencies]
# Futures for wasm-bindgen
wasm-bindgen-futures = "0.4"
# WASI bindings
wit-bindgen = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rand = "0.8"
rand_xoshiro = "0.6"

# Math operations
ndarray = { version = "0.15", features = ["serde"] }

# CSV reading
csv = "1.3"

# WebGPU support - using wgpu for GPU compute
wgpu = { version = "23.0", features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
