[package]
name = "wasm-ml"
version = "0.2.0"
edition = "2021"
description = "WASM ML module with portable GPU acceleration via wasi:gpu"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-ml-benchmark"
path = "src/main.rs"

[dependencies]
# WIT bindings generation
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Random number generation (for CPU fallback and seeding)
rand = "0.8"
rand_xoshiro = "0.6"

# Math operations
ndarray = { version = "0.15", features = ["serde"] }

# CSV reading
csv = "1.3"

# Byte casting for GPU buffers
bytemuck = { version = "1.14", features = ["derive"] }

# GPU and async dependencies
wgpu = "0.18"
futures-intrusive = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific dependencies - minimal for component model
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

# Build as WASM component
[package.metadata.component]
package = "wasm-ml:ml-module"

[package.metadata.component.target]
path = "wit"
world = "ml-compute"

[package.metadata.component.target.dependencies]
"wasi:gpu" = { path = "wit" }
