[package]
name = "wasmtime-gpu-host"
version = "0.1.0"
edition = "2021"
description = "Wasmtime host runtime with wasi:gpu support (WebGPU + CUDA backends)"
authors = ["Fernando Giorgetti"]
license = "Apache-2.0"

[dependencies]
# Wasmtime runtime
wasmtime = { version = "27", features = ["component-model"] }
wasmtime-wasi = "27"

# GPU backends
wgpu = { version = "23.0", features = ["vulkan-portability"] }

# CUDA bindings (optional, for H100 support)
cudarc = { version = "0.12", features = ["cublas", "curand", "nvrtc", "cuda-12060"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
pollster = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Attestation - lunal-attestation for TDX and NVIDIA
lunal-attestation = { path = "../attestation-rs/lunal-attestation", optional = true }

# AMD SEV-SNP attestation via vTPM
amd-vtpm = { path = "../attestation-rs/amd-vtpm", optional = true }
vtpm-attestation = { path = "../attestation-rs/vtpm-attestation", optional = true }

# SEV crate for parsing SNP reports
sev = { version = "6.2.1", features = ["crypto_nossl"], optional = true }

[features]
default = ["cuda", "attestation-azure"]
cuda = ["dep:cudarc"]
webgpu-only = []

# Individual attestation features
attestation-tdx = ["lunal-attestation", "lunal-attestation/attestation-tdx"]
attestation-nvidia = ["lunal-attestation", "lunal-attestation/attestation-nvidia"]
attestation-amd = ["amd-vtpm", "amd-vtpm/attester", "vtpm-attestation", "vtpm-attestation/tpm", "sev"]

# Combined features
attestation-all = ["attestation-tdx", "attestation-nvidia", "attestation-amd"]
attestation-azure = ["attestation-amd", "attestation-nvidia"]  # Azure CVM with H100

[[bin]]
name = "wasmtime-gpu-host"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
