[package]
name = "wasmtime-webgpu-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wasmtime for WASM execution
wasmtime = "15.0"
wasmtime-wasi = "15.0"
anyhow = "1.0"

# wgpu for GPU access
wgpu = { version = "0.19", features = ["vulkan", "metal", "dx12"] }
pollster = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "wasmtime-webgpu-host"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
