[package]
name = "wasmtime-webgpu-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wasmtime for WASM execution
wasmtime = "15.0"
wasmtime-wasi = "15.0"
anyhow = "1.0"

# wgpu for GPU access
wgpu = "0.19"
pollster = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"  # For encoding binary data
bincode = "1.3"  # For serializing attestation evidence
base64 = "0.22"  # For base64 encoding

# Attestation - lunal-attestation for TDX and NVIDIA
lunal-attestation = { path = "../attestation-rs/lunal-attestation", optional = true }

# AMD SEV-SNP attestation via vTPM
amd-vtpm = { path = "../attestation-rs/amd-vtpm", optional = true }
vtpm-attestation = { path = "../attestation-rs/vtpm-attestation", optional = true }

# SEV crate for parsing SNP reports
sev = { version = "6.2.1", features = ["crypto_nossl"], optional = true }

[features]
default = []

# Individual attestation features
attestation-tdx = ["lunal-attestation", "lunal-attestation/attestation-tdx"]
attestation-nvidia = ["lunal-attestation", "lunal-attestation/attestation-nvidia"]
attestation-amd = ["amd-vtpm", "amd-vtpm/attester", "vtpm-attestation", "vtpm-attestation/tpm", "sev"]

# Combined features
attestation-all = ["attestation-tdx", "attestation-nvidia", "attestation-amd"]
attestation-azure = ["attestation-amd", "attestation-nvidia"]  # Azure CVM with H100

[[bin]]
name = "wasmtime-webgpu-host"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
