[package]
name = "tee_attestation"
version = "0.1.0"
edition = "2021"
description = "Python bindings for TEE attestation (AMD SEV-SNP + NVIDIA GPU)"

[lib]
name = "tee_attestation"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

# AMD SEV-SNP attestation via vTPM
vtpm-attestation = { version = "0.6", optional = true }
amd-vtpm = { version = "0.2", optional = true }
sev = { version = "4.0", optional = true }

# TDX attestation (optional)
lunal-attestation = { version = "0.5", optional = true }

[features]
default = ["attestation-amd"]
attestation-amd = ["vtpm-attestation", "amd-vtpm", "sev"]
attestation-tdx = ["lunal-attestation"]
attestation-nvidia = ["lunal-attestation"]

[profile.release]
lto = true
opt-level = 3
